Fix project desc last image and overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -537,6 +537,7 @@ div:has(.droste-final-image) {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	overflow-x: hidden;
 	overflow-y: scroll;
 	max-width: 100%;
 	max-height: 80vh;
@@ -1443,7 +1444,7 @@ h2[class*="icon-before"]::before {
 	}
 
 	.projects__desc .projects__picture:last-child {
-		max-width: calc(100vw - (1.4 * 11rem) - var(--header-height));
+		max-width: calc(100vw - (1.4 * 19rem) - var(--header-height));
 	}
 
 	/* Remove picture elements that do not have content */
